--- a/css/style.css
+++ b/css/style.css
@@ -401,3 +401,17 @@ footer
 {
     margin-bottom: 10px;
 }
+
+.search-input 
+{
+    padding-left: 2.5rem;
+    border-radius: 5px;
+    border: 1px solid #dee2e6;
+    transition: all 0.3s;
+}
+
+.search-input:focus 
+{
+    border-color: #007bff;
+    box-shadow: 0 0 0 0.25rem rgba(0, 123, 255, 0.25);
+}
